--- a/css/about.css
+++ b/css/about.css
@@ -1,6 +1,4 @@
 
-@import 'colors.css';
-
 .about {
   background-color: var(--white-color);
   min-height: 300px;
@@ -11,23 +9,8 @@
 .about a {
   color: var(--brand-color);
 }
-  
-.about .content {
-text-align: center;
-/* @media screen and (max-width: 600px) {
-  padding: 0 30px 0 30px;
-  } */
-}
-  
-.about article {
-  /* border: 1px solid #e7eaee;
-  background-color: #fafafa; */
-  border-radius: 8px;
-  padding: 10px 0px;
-  /* margin: 42px 0 0 0px;  */
-}
 
-.about article .main-title {
+.about .main-title {
   text-align: left;
   margin: 6px 0;
   font-size: 24px;
@@ -55,7 +38,7 @@ text-align: center;
   text-align: left;
   border-top: 1px solid var(--border-light);
   padding: 24px 14px 24px 0 ;
-  color: #46515C;
+  color: var(--text-secondary);
 }
 /* .about .table-info td {
   text-align: left;
@@ -74,7 +57,7 @@ text-align: center;
   font-size: 15px;
   font-weight: 500;
   color: var(--text-secondary);
-  margin: 10px 0 0 0;
+  margin: 0;
 }
 .about .span-company {
   display: block;
@@ -95,11 +78,10 @@ text-align: center;
 .about .span-desc-multiline {
   display: block;
   font-size: 14px;
-  color: var(--text-teritiary);
+  color: var(--text-tertiary);
   line-height: 28px;
   margin-bottom: 16px;
 }
-  
   
 .about .span-desc li, .span-desc-multiline li {
   list-style-type: none;
@@ -135,9 +117,6 @@ text-align: center;
 }
 
 @media screen and (max-width:600px) {
-  .about article {
-    margin: 0;
-  }
   .about .table-info th {
     width: 25%;
   }
