--- a/css/reset.css
+++ b/css/reset.css
@@ -1,7 +1,5 @@
 @charset "utf-8";
 
-@import 'colors.css';
-
 
 html,body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, main, menu, nav, output, ruby, section, summary, time, mark, audio, video {
     padding: 0;
@@ -10,12 +8,24 @@ html,body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockqu
     vertical-align: baseline;
     /* -webkit-text-size-adjust: none; */
 }
+
+html,
+body
+{
+    scroll-behavior: smooth;
+}
     
 html {
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
     -moz-text-size-adjust:100%;
 }
+body {
+    font-family: "Helvetica", -apple-system, "PingFang SC", "Microsoft YaHei", "Source Han Sans SC", "Noto Sans CJK SC", "WenQuanYi Micro Hei", sans-serif;
+    word-wrap: break-word;
+    word-break: break-all;
+    /* Georgia, Cambria, "Times New Roman", charter, */
+  }
     
 img {
     pointer-events: none;
@@ -23,7 +33,7 @@ img {
 
 table {
     border-collapse: collapse;
-border-spacing: 0;
+    border-spacing: 0;
 }
 
 ul li {
@@ -54,12 +64,6 @@ ul
     padding-inline-start: 0;
 }
 
-html,
-body
-{
-    scroll-behavior: smooth;
-}
-
 a:not([class])
 {
     text-decoration-skip-ink: auto;
@@ -88,3 +92,40 @@ select
         scroll-behavior: auto;
     }
 }
+
+
+/* 全局::selection样式 */
+ span::selection,
+ th::selection, 
+ tr::selection, 
+ td::selection,
+ h1::selection, 
+ h2::selection, 
+ h3::selection, 
+ h4::selection, 
+ h5::selection, 
+ p::selection, 
+ a::selection,
+ section::selection {
+   background: var(--selection-color);
+   color: #ffffff;
+ }
+ 
+ P > span::selection, 
+ u::selection, 
+ code::selection,
+ em::selection, 
+ strong::selection {
+   background: var(--selection-color);
+   color: #ffffff;
+ }
+ 
+ .label-yellow::selection,
+ .title::selection, 
+ .post-date::selection,
+ .post-except::selection,
+ .post-main-title::selection,
+ .post-meta::selection {
+   background: var(--selection-color);
+   color: #ffffff;
+ }
