--- a/css/colors.css
+++ b/css/colors.css
@@ -1,7 +1,6 @@
 :root
 {
     --brand-color: #5694f1;
-    --selection-color: #1d1d22;
     --ink-color: #3c3c3c;
     --white-color: #ffffff;
     --text-primary: #1f2020;
@@ -11,6 +10,19 @@
     --border-light: #f2f4f7;
     --border-regular: #eef1f3;
     --border-tertiary: #dddddd;
+    --selection-color: #1d1d1d;
 
-    --table-hover: #f9fafc
+    --table-hover: #f9fafc;
+    --font-color-toc: #81808b;
+    --font-size-regular: 0.9375rem;
+
+    --font-color-0: #04077e;
+    --font-color-1: #000;
+    --font-color-2: #666;
+    --font-color-3: #aaa;
+    --bg-color-1: #eee;
+    --line-1: #ccc;
+    --line-2: #ddd
+    
+
 }
