--- a/css/colors.css
+++ b/css/colors.css
@@ -12,7 +12,7 @@
     --border-tertiary: #dddddd;
     --selection-color: #1d1d1d;
 
-    --table-hover: #f9fafc;
+    --table-hover: #f8f8f8;
     --font-color-toc: #81808b;
     --font-size-regular: 0.9375rem;
 
