--- a/css/postmd.css
+++ b/css/postmd.css
@@ -47,7 +47,7 @@
     margin: 12px 0;
 }
 
-.post-md h1 {
+h1 {
     font-size:30px;
     font-weight: 600;
     line-height: 72px;
@@ -91,7 +91,6 @@
     line-height: 1.2;
     padding: 12px 0;
 }
-
 
 
 /* ------------------------ 其它Markdown元素样式 ------------------------ */
@@ -255,13 +254,13 @@
 .post-md table th
 {
     padding: 10px 14px;
-    border:1px solid #e4e7eb;
+    border:1px solid #E8E8E8;
     background-color: #f8f8f8;
     word-break: normal;
     -ms-word-break: normal;
 }
 .post-md table tr, td {
-    border:1px solid #e4e7eb;
+    border:1px solid #E8E8E8;
     padding: 10px 14px;
     /*竖直居中*/
     vertical-align: middle;
