--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -97,8 +97,8 @@
 .pflo .info {
     position: relative;
     width: 100%;
-    height: 40px;
-    padding: 8px 4px;
+    height: 48px;
+    padding: 4px 4px;
     color: #333;
     text-align: left;
 }
@@ -117,7 +117,7 @@
     transition: all 0.4s ease;
 }
 .pflo .info h3 {
-    margin: 4px 0;
+    margin: 4px 0 0 0;
     font-size: 14px;
     font-weight: 600;
 }
@@ -126,7 +126,7 @@
 }
 
 .pflo .info p {
-    margin: 4px 0;
+    margin: 0 0 4px 0;
     font-size: 13px;
     color: var(--text-tertiary);
 }
