--- a/css/toc.css
+++ b/css/toc.css
@@ -3,10 +3,10 @@
     z-index: 100;
     position: fixed;
     right: 0px;
-    top: 100px;
+    top: 60px;
     width: 200px;
     height: 84%;
-    padding: 20px 10px 10px 28px;
+    padding: 20px 10px 10px 48px;
     margin-bottom: 32px;
     display: none;
     background-color:rgba(255,255,255,0.96);
@@ -22,11 +22,11 @@
 #toc a:hover {
     color: var(--text-secondary);
 }
-    
+
 /* 设置toc的List的style */
 #toc ol>li {
     padding: 0 0 8px 0px;
-    list-style-type: decimal;
+    list-style-type: cjk-ideographic;
 }
  #toc ol>li ol {
     margin: 0;
@@ -47,20 +47,22 @@
       width: 100%;
       height: 100%;
       left: 0px;
-      top: 60px;
+      top: 0px;
       bottom: 0px;
+      padding-top: 100px;
     }
 }
-@media screen and (min-width: 601px) and (max-width: 1179px) {
+@media screen and (min-width: 601px) and (max-width: 1219px) {
     #toc{
     right: 0px;
-    top: 60px;
+    top: 0px;
     height: 100%;
     bottom: 0px;
+    padding-top: 100px;
     box-shadow: -10px 4px 6px -10px rgba(38,38,38,0.08);
     }
 }
-@media screen and (min-width: 1180px) {
+@media screen and (min-width: 1220px) {
     #toc{
     display: block; 
   }
@@ -97,11 +99,11 @@
   text-align: center; 
   position: fixed;
   right:-1px;
-  top: 72px;
+  top: 44px;
   cursor: pointer;
   box-shadow: 0 2px 8px -3px rgba(0,0,0,0.2);
 }
-@media screen and (min-width: 1180px) {
+@media screen and (min-width: 1220px) {
     .mini_toc{
     display: none;
   }
