--- a/css/home.css
+++ b/css/home.css
@@ -30,10 +30,9 @@ a:hover {
 }
 .paper-main
 {
-    max-width: 848px;
+    max-width: 1024px;
     margin: 0 auto;
     padding: 120px 8vw 24px;
-    background: #fff;
     border-radius: 24px;
     background: #fff;
 }
@@ -53,7 +52,7 @@ a:hover {
     flex-direction: row;
     padding-bottom: 48px;
     margin-bottom: 48px;
-    border-bottom: 1px dashed var(--line-2);
+    border-bottom: 1px dashed var(--border-regular);
 }
 @media screen and (max-width: 680px) {
     .post { 
@@ -70,7 +69,7 @@ a:hover {
     width: 160px;
     height: 100%;
     aspect-ratio: auto 4/3;
-    margin-left: 24px;
+    margin-left: 6.5vw;
     cursor: pointer;
 }
 @media screen and (max-width:440px) {
